--- a/main.ipynb
+++ b/main.ipynb
@@ -1,56 +1,380 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "d9aa2e93",
-   "metadata": {},
-   "source": [
-    "Primero, empezaremos con una cuadrática de la forma:\n",
-    "$ax² + bx + c = 0$.\n",
-    "\n",
-    "En la que $ a = 1 $, así que, $x²+bx+c=0$\n",
-    "\n",
-    "si $a \\neq 0 $, entonces, multiplicaremos ambos lados por $\\frac{1}{a}$. \\\n",
-    "$\\frac{1}{a}(ax²+bx+c)= \\frac{1}{a}0$ \n",
-    "lo que nos lleva, por propiedad conmutativa, a $x²+\\frac{bx}{a}+\\frac{c}{a}=0$, entonces, podremos empezar.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f068d74e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def quadratic(a,b,c):\n",
-    "    if a == 1:\n",
-    "        print(\"Hacer la ecuación\")\n",
-    "    else:\n",
-    "        a = 1 / a\n",
-    "        b = b * 1 / a\n",
-    "        c = c * 1 / a"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cc84012c",
-   "metadata": {},
-   "source": [
-    "When we have the quadratic form as $ x^2 + bx + c = 0 $"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.13.7"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+    "cells": [
+        {
+            "cell_type": "markdown",
+            "id": "d9aa2e93",
+            "metadata": {},
+            "source": [
+                "# Po-Shen K: Calculadora de Ecuaciones Cuadráticas\n",
+                "\n",
+                "Este notebook implementa el **método de Po-Shen Loh** para resolver ecuaciones cuadráticas de la forma:\n",
+                "\n",
+                "$ax² + bx + c = 0$\n",
+                "\n",
+                "## ¿Qué es el Método de Po-Shen Loh?\n",
+                "\n",
+                "El método de Po-Shen Loh es un enfoque intuitivo que se basa en las **fórmulas de Vieta** en lugar de memorizar la fórmula cuadrática tradicional.\n",
+                "\n",
+                "### Paso 1: Normalización\n",
+                "\n",
+                "Primero, normalizamos la ecuación para que $a = 1$. Si $a \\neq 1$, dividimos toda la ecuación por $a$:\n",
+                "\n",
+                "$$\\frac{1}{a}(ax² + bx + c) = \\frac{1}{a} \\cdot 0$$\n",
+                "\n",
+                "Lo que nos da:\n",
+                "\n",
+                "$$x² + \\frac{b}{a}x + \\frac{c}{a} = 0$$\n",
+                "\n",
+                "Ahora trabajamos con: $x² + bx + c = 0$\n",
+                "\n",
+                "### Paso 2: Usar las Fórmulas de Vieta\n",
+                "\n",
+                "De las fórmulas de Vieta sabemos que para dos raíces $r_1$ y $r_2$:\n",
+                "- $r_1 + r_2 = -b$\n",
+                "- $r_1 \\times r_2 = c$\n",
+                "\n",
+                "### Paso 3: Promedio de las Raíces\n",
+                "\n",
+                "El promedio de las dos raíces es:\n",
+                "\n",
+                "$$\\text{Promedio} = \\frac{r_1 + r_2}{2} = \\frac{-b}{2}$$\n",
+                "\n",
+                "### Paso 4: Expresar las Raíces\n",
+                "\n",
+                "Podemos expresar las raíces como desviaciones del promedio:\n",
+                "\n",
+                "$$r_1 = \\frac{-b}{2} + u \\quad \\text{y} \\quad r_2 = \\frac{-b}{2} - u$$\n",
+                "\n",
+                "para algún valor $u$.\n",
+                "\n",
+                "### Paso 5: Calcular u\n",
+                "\n",
+                "Usando la segunda fórmula de Vieta ($r_1 \\times r_2 = c$):\n",
+                "\n",
+                "$$\\left(\\frac{-b}{2} + u\\right)\\left(\\frac{-b}{2} - u\\right) = c$$\n",
+                "\n",
+                "$$\\left(\\frac{b}{2}\\right)^2 - u^2 = c$$\n",
+                "\n",
+                "$$u^2 = \\left(\\frac{b}{2}\\right)^2 - c$$\n",
+                "\n",
+                "$$u = \\pm\\sqrt{\\left(\\frac{b}{2}\\right)^2 - c}$$\n",
+                "\n",
+                "### Paso 6: Las Raíces\n",
+                "\n",
+                "Finalmente:\n",
+                "\n",
+                "$$x = \\frac{-b}{2} \\pm \\sqrt{\\left(\\frac{b}{2}\\right)^2 - c}$$\n"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "import_libs",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "import cmath\n",
+                "import math\n",
+                "from typing import Tuple, List, Dict"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "f068d74e",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "def po_shen_loh_method(a: float, b: float, c: float, verbose: bool = True) -> Tuple[complex, complex, List[Dict]]:\n",
+                "    \"\"\"\n",
+                "    Resuelve una ecuación cuadrática usando el método de Po-Shen Loh.\n",
+                "    \n",
+                "    Args:\n",
+                "        a: Coeficiente de x²\n",
+                "        b: Coeficiente de x\n",
+                "        c: Término constante\n",
+                "        verbose: Si es True, imprime los pasos intermedios\n",
+                "    \n",
+                "    Returns:\n",
+                "        Tupla con (raíz1, raíz2, lista_de_pasos)\n",
+                "    \"\"\"\n",
+                "    steps = []\n",
+                "    \n",
+                "    # Validación\n",
+                "    if abs(a) < 1e-10:\n",
+                "        raise ValueError(\"El coeficiente 'a' no puede ser 0 (no sería una ecuación cuadrática)\")\n",
+                "    \n",
+                "    # Paso 0: Ecuación original\n",
+                "    steps.append({\n",
+                "        'step': 0,\n",
+                "        'description': 'Ecuación original',\n",
+                "        'formula': f'{a}x² + {b}x + {c} = 0'\n",
+                "    })\n",
+                "    \n",
+                "    # Paso 1: Normalización (hacer a = 1)\n",
+                "    if abs(a - 1) > 1e-10:\n",
+                "        steps.append({\n",
+                "            'step': 1,\n",
+                "            'description': f'Dividir por a = {a} para normalizar',\n",
+                "            'formula': f'x² + {b/a:.4f}x + {c/a:.4f} = 0'\n",
+                "        })\n",
+                "        b_normalized = b / a\n",
+                "        c_normalized = c / a\n",
+                "    else:\n",
+                "        steps.append({\n",
+                "            'step': 1,\n",
+                "            'description': 'Ya está normalizada (a = 1)',\n",
+                "            'formula': f'x² + {b}x + {c} = 0'\n",
+                "        })\n",
+                "        b_normalized = b\n",
+                "        c_normalized = c\n",
+                "    \n",
+                "    # Paso 2: Calcular el promedio de las raíces\n",
+                "    average = -b_normalized / 2\n",
+                "    steps.append({\n",
+                "        'step': 2,\n",
+                "        'description': 'Promedio de las raíces (por fórmulas de Vieta: r₁ + r₂ = -b)',\n",
+                "        'formula': f'Promedio = -b/2 = {average:.4f}'\n",
+                "    })\n",
+                "    \n",
+                "    # Paso 3: Expresar raíces como promedio ± u\n",
+                "    steps.append({\n",
+                "        'step': 3,\n",
+                "        'description': 'Las raíces se pueden expresar como',\n",
+                "        'formula': f'r₁ = {average:.4f} + u  y  r₂ = {average:.4f} - u'\n",
+                "    })\n",
+                "    \n",
+                "    # Paso 4: Calcular u² usando el producto\n",
+                "    b_half = b_normalized / 2\n",
+                "    u_squared = (b_half ** 2) - c_normalized\n",
+                "    steps.append({\n",
+                "        'step': 4,\n",
+                "        'description': 'Usando r₁ × r₂ = c, obtenemos',\n",
+                "        'formula': f'({average:.4f} + u)({average:.4f} - u) = {c_normalized:.4f}'\n",
+                "    })\n",
+                "    steps.append({\n",
+                "        'step': 5,\n",
+                "        'description': 'Simplificando',\n",
+                "        'formula': f'({b_half:.4f})² - u² = {c_normalized:.4f}'\n",
+                "    })\n",
+                "    steps.append({\n",
+                "        'step': 6,\n",
+                "        'description': 'Despejando u²',\n",
+                "        'formula': f'u² = ({b_half:.4f})² - {c_normalized:.4f} = {u_squared:.4f}'\n",
+                "    })\n",
+                "    \n",
+                "    # Paso 5: Calcular u y las raíces\n",
+                "    if u_squared >= 0:\n",
+                "        # Raíces reales\n",
+                "        u = math.sqrt(u_squared)\n",
+                "        steps.append({\n",
+                "            'step': 7,\n",
+                "            'description': 'Como u² ≥ 0, tenemos raíces reales',\n",
+                "            'formula': f'u = ±{u:.4f}'\n",
+                "        })\n",
+                "        root1 = average + u\n",
+                "        root2 = average - u\n",
+                "        steps.append({\n",
+                "            'step': 8,\n",
+                "            'description': 'Las raíces son',\n",
+                "            'formula': f'x₁ = {average:.4f} + {u:.4f} = {root1:.4f}\\nx₂ = {average:.4f} - {u:.4f} = {root2:.4f}'\n",
+                "        })\n",
+                "    else:\n",
+                "        # Raíces complejas\n",
+                "        u = math.sqrt(-u_squared)\n",
+                "        steps.append({\n",
+                "            'step': 7,\n",
+                "            'description': 'Como u² < 0, tenemos raíces complejas',\n",
+                "            'formula': f'u = ±{u:.4f}i'\n",
+                "        })\n",
+                "        root1 = complex(average, u)\n",
+                "        root2 = complex(average, -u)\n",
+                "        steps.append({\n",
+                "            'step': 8,\n",
+                "            'description': 'Las raíces complejas son',\n",
+                "            'formula': f'x₁ = {average:.4f} + {u:.4f}i\\nx₂ = {average:.4f} - {u:.4f}i'\n",
+                "        })\n",
+                "    \n",
+                "    # Imprimir pasos si verbose=True\n",
+                "    if verbose:\n",
+                "        print(\"=\"*60)\n",
+                "        print(f\"  Resolviendo: {a}x² + {b}x + {c} = 0\")\n",
+                "        print(\"=\"*60)\n",
+                "        for step in steps:\n",
+                "            print(f\"\\n[Paso {step['step']}] {step['description']}\")\n",
+                "            print(f\"  {step['formula']}\")\n",
+                "        print(\"\\n\" + \"=\"*60)\n",
+                "        print(f\"  SOLUCIÓN: x₁ = {root1}, x₂ = {root2}\")\n",
+                "        print(\"=\"*60 + \"\\n\")\n",
+                "    \n",
+                "    return root1, root2, steps"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "test_cases",
+            "metadata": {},
+            "source": [
+                "## Casos de Prueba\n",
+                "\n",
+                "Probemos el método con diferentes tipos de ecuaciones cuadráticas."
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "test1",
+            "metadata": {},
+            "source": [
+                "### Caso 1: Raíces Reales Distintas\n",
+                "\n",
+                "Ecuación: $x² - 5x + 6 = 0$\n",
+                "\n",
+                "Raíces esperadas: $x = 2$ y $x = 3$"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "run_test1",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "r1, r2, _ = po_shen_loh_method(1, -5, 6)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "test2",
+            "metadata": {},
+            "source": [
+                "### Caso 2: Raíz Doble\n",
+                "\n",
+                "Ecuación: $x² - 4x + 4 = 0$\n",
+                "\n",
+                "Raíz esperada: $x = 2$ (doble)"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "run_test2",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "r1, r2, _ = po_shen_loh_method(1, -4, 4)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "test3",
+            "metadata": {},
+            "source": [
+                "### Caso 3: Raíces Complejas\n",
+                "\n",
+                "Ecuación: $x² + 2x + 5 = 0$\n",
+                "\n",
+                "Raíces esperadas: $x = -1 \\pm 2i$"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "run_test3",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "r1, r2, _ = po_shen_loh_method(1, 2, 5)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "test4",
+            "metadata": {},
+            "source": [
+                "### Caso 4: Coeficiente a ≠ 1\n",
+                "\n",
+                "Ecuación: $2x² - 8x + 6 = 0$\n",
+                "\n",
+                "Raíces esperadas: $x = 1$ y $x = 3$"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "run_test4",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "r1, r2, _ = po_shen_loh_method(2, -8, 6)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "test5",
+            "metadata": {},
+            "source": [
+                "### Caso 5: Ecuación Clásica\n",
+                "\n",
+                "Ecuación: $x² - x - 2 = 0$\n",
+                "\n",
+                "Raíces esperadas: $x = -1$ y $x = 2$"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "run_test5",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "r1, r2, _ = po_shen_loh_method(1, -1, -2)"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "id": "interactive",
+            "metadata": {},
+            "source": [
+                "## Calculadora Interactiva\n",
+                "\n",
+                "Puedes usar la función directamente con tus propios valores:"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "id": "interactive_cell",
+            "metadata": {},
+            "outputs": [],
+            "source": [
+                "# Cambia estos valores para resolver tu propia ecuación\n",
+                "a = 1\n",
+                "b = -3\n",
+                "c = 2\n",
+                "\n",
+                "raiz1, raiz2, pasos = po_shen_loh_method(a, b, c, verbose=True)"
+            ]
+        }
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "Python 3",
+            "language": "python",
+            "name": "python3"
+        },
+        "language_info": {
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
+            "nbconvert_exporter": "python",
+            "pygments_lexer": "ipython3",
+            "version": "3.13.7"
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 5
 }
